# gmail-management

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cmd_args.rs  mail_service.rs  main.rs  ringbuffer.rs
