[package]
name = "gmail-management"
version = "0.1.0"
edition = "2021"

[dependencies]
google-gmail1 = "5.0.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1.39.2", features = ["full"] }
getopts = "0.2"
clap = { version = "4.5.15", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
lettre = "0.11.7"
lettre_email = "0.9.4"
mime_guess = "2.0.5"